# gears-be-aws

./: Cargo.toml  README.md  package-lock.json  package.json  serverless.yml
gearsfns/: Cargo.toml
gearsfns/src/: lib.rs  mod.rs
gearsfns/src/handler/: taker.rs  world.rs
gearsfns/src/qna/: answerdto.rs  mod.rs  questiondto.rs  questionlist.rs
hello/: Cargo.toml
