[package]
name = "gearsfns"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master"}
lambda_http = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master"}

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

jsonschema = "0.3"
uuid = { version = "0.8.1", features = ["serde", "v4"] }

[lib]
name = "gearsfn"
path = "src/lib.rs"

[[bin]]
name = "taker"
path = "src/handler/taker.rs"

[[bin]]
name = "world"
path = "src/handler/world.rs"

