[package]
name = "hello"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master"}
lambda_http = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master"}

serde_json = "1.0"

[[bin]]
name = "hello"
path = "src/bin/hello.rs"

[[bin]]
name = "world"
path = "src/bin/world.rs"

